@@ -75,11 +75,13 @@ Documentation for the ML Kit is located in the `doc' directory.
 
 5. Support for Other Platforms and How You Can Help
 ---------------------------------------------------
-Currently, only the Linux/x86 platform is supported. We hope to port
-the bytecode interpreter to run on other platforms as well. If you
-want to help port the runtime system to other platforms, please let us
-know; the runtime system and bytecode interpreter is written in C (see
-the src/RuntimeWithGC/ directory in the source distribution.)
+
+Currently, only the Linux/x86 platform and the FreeBSD/x86 platform
+(see below) are supported. We hope to port the bytecode interpreter to
+run on other platforms as well. If you want to help port the runtime
+system to other platforms, please let us know; the runtime system and
+bytecode interpreter is written in C (see the src/RuntimeWithGC/
+directory in the source distribution.)
 
 For the native x86 backend, the Kit calls the gcc compiler to assemble
 and link the x86 code files it generates. The native backend for the
@@ -89,6 +91,17 @@ improving the x86 assembler code generated by the x86 native backend
 (e.g., by peep-hole optimization) are very much welcomed; the flag
 --delete_target_files can be used to disable the deletion of the
 .s-files generated by the backend.
+
+To use the ML Kit for the FreeBSD/x86 platform, please alter the files
+
+  kit/Makefile
+  kit/src/Makefile
+  kit/src/Common/SMLofNJOnKit.sml
+  kit/src/heap2exec/Makefile
+
+to suit your needs before you proceed with the installation
+instructions in the INSTALL file. The port to the FreeBSD/x86 platform
+is due to Koshy A Joseph.
 
 6. VCG
 ------
