@@ -1,5 +1,11 @@
 ML Kit NEWS file
 
+ * mael 2002-09-20: Fixed bug caused by Timing.checkRealTimer raising
+   exception Time on some systems when -timing flag is used.
+
+ * mael 2002-09-17: Added FreeBSD support - patches contributed by 
+   Koshy A Joseph.
+
            **** ML Kit version 4.1.1 is released ****
 
  * mael 2002-08-25: Removed Posix support due to licensing problems 
